[gd_scene load_steps=3 format=3 uid="uid://cc4n1lr8tjnl1"]

[ext_resource type="Script" path="res://scripts/CardUI.gd" id="1_i14cy"]

[sub_resource type="Theme" id="Theme_5lcva"]

[node name="Card" type="Panel"]
anchors_preset = -1
anchor_right = 0.087
anchor_bottom = 0.247
offset_right = -0.224007
offset_bottom = -0.0559998
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme = SubResource("Theme_5lcva")
script = ExtResource("1_i14cy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
